<resources>
    <string name="app_name">TP5_Maps</string>
    <string name="title_activity_my_maps">TP5 : Google Maps </string>
    <string name="titre_marker">Titre Marker</string>
    <string name="coordonnees">Coordonnées</string>
    <string name="marker_informations">Infos Markers</string>
    <string name="map_mode_hybride">Mode Hybride</string>
    <string name="map_mode_satellite">Mode Satellite</string>
    <string name="map_mode_normal">Mode Normal</string>
    <string name="reset_map">reinitialiser</string>
    <string name="Photo"> Photo Marker</string>
    <string name="add_marker">Ajout de Marker</string>
    <string name="prendre_photo">Prendre photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="valider">Enregistrer</string>
    <string name="Text_Toast">Au moins un élément requis : le nom ou la photo du marker</string>
    <string name="Marker_nom_parDefaut">New Marker (Default Name)</string>
</resources>
