<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditMarkerINFO">

    <LinearLayout
        android:id="@+id/AjoutMarkerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TitreMarker"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/titre_marker"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:typeface="serif"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editTextTitre"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text|textPersonName"
                android:textAlignment="center"
                android:textSize="30dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/Photo"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:typeface="serif"
                android:textSize="30dp" />

            <ImageButton
                android:id="@+id/BtnPickGallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/camera"
                android:src ="@android:drawable/ic_menu_gallery"
                android:fontFamily="cursive"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:onClick="PickPhotoFromGalley"/>

            <ImageButton
                android:id="@+id/BtnTakePhoto"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gallery"
                android:src ="@android:drawable/ic_menu_camera"
                android:fontFamily="cursive"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:onClick="takePhotoFromCamera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnValider"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:fontFamily="cursive"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"
                android:textSize="30dp"
                style="@android:style/Widget.ActionButton.CloseMode"
                android:onClick="saveMarker"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>